# StepanovYaroslav_tppl

./: README.md
average/: data.txt  main.asm
best_program/: CMakeLists.txt  README.md  collector.hpp  data_collector  main.cpp  sensor_data.txt  tests.cpp
cow/: CMakeLists.txt  CowInterpreter.h  flake.nix  main.cpp  tests.cpp
pascal/: CMakeLists.txt  interpreter.hpp  main.cpp  tests.cpp
plib/: .coverage
plib/plib/: __init__.py  base.py
plib/tests/: test_point.py
text_analyzer/: analyzer.py  text.txt
